change sample to param statements in guides

--- a/tutorial/source/svi_part_iv.ipynb
+++ b/tutorial/source/svi_part_iv.ipynb
@@ -180,15 +180,15 @@
     "from pyro.distributions import constraints\n",
     "\n",
     "def good_guide():\n",
-    "    scale = pyro.sample(\"scale\", torch.tensor(0.05),               \n",
-    "                        constraint=constraints.positive)\n",
+    "    scale = pyro.param(\"scale\", torch.tensor(0.05),               \n",
+    "                       constraint=constraints.positive)\n",
     "    pyro.sample(\"x\", dist.Normal(0.0, scale))\n",
     "``` \n",
     "while the following high-variance guide is very likely to lead to problems:\n",
     "```python\n",
     "def bad_guide():\n",
-    "    scale = pyro.sample(\"scale\", torch.tensor(12345.6),               \n",
-    "                        constraint=constraints.positive)\n",
+    "    scale = pyro.param(\"scale\", torch.tensor(12345.6),               \n",
+    "                       constraint=constraints.positive)\n",
     "    pyro.sample(\"x\", dist.Normal(0.0, scale))\n",
     "``` \n",
     "\n",
