improved `render_model`: reverted black command on .ipynb files

--- a/tutorial/source/mle_map.ipynb
+++ b/tutorial/source/mle_map.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -165,10 +165,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f23c61acd00>"
+       "<graphviz.graphs.Digraph at 0x7f260a8a11c0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -363,16 +363,16 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f23c6190d30>"
+       "<graphviz.graphs.Digraph at 0x7f260adf3ee0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pyro.render_model(original_model, model_args=(data,), render_distributions=True, render_params=True)"
+    "pyro.render_model(original_model, model_args=(data,), render_distributions=True)"
    ]
   },
   {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -452,16 +452,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f23bd61dca0>"
+       "<matplotlib.legend.Legend at 0x7f260a981d90>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,17 +525,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[iter 0]  loss: 7.0389\n",
-      "[iter 50]  loss: 6.8189\n",
-      "[iter 100]  loss: 6.7459\n",
-      "[iter 150]  loss: 6.7318\n",
+      "[iter 0]  loss: 7.0436\n",
+      "[iter 50]  loss: 6.8213\n",
+      "[iter 100]  loss: 6.7467\n",
+      "[iter 150]  loss: 6.7319\n",
       "[iter 200]  loss: 6.7302\n",
       "Our MLE estimate of the latent fairness is 0.598\n"
      ]
@@ -557,15 +557,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[iter 0]  loss: 5.6745\n",
-      "[iter 50]  loss: 5.6007\n",
+      "[iter 0]  loss: 5.6889\n",
+      "[iter 50]  loss: 5.6005\n",
       "[iter 100]  loss: 5.6004\n",
       "[iter 150]  loss: 5.6004\n",
       "[iter 200]  loss: 5.6004\n",
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,19 +601,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[iter 0]  loss: 8.3383\n",
-      "[iter 50]  loss: 7.7312\n",
-      "[iter 100]  loss: 7.3079\n",
-      "[iter 150]  loss: 7.0396\n",
-      "[iter 200]  loss: 6.8836\n",
-      "Our MAP estimate of the latent fairness under the Uniform prior is 0.513 matching the MLE estimate\n"
+      "[iter 0]  loss: 6.7490\n",
+      "[iter 50]  loss: 6.7302\n",
+      "[iter 100]  loss: 6.7301\n",
+      "[iter 150]  loss: 6.7301\n",
+      "[iter 200]  loss: 6.7301\n",
+      "Our MAP estimate of the latent fairness under the Uniform prior is 0.600 matching the MLE estimate\n"
      ]
     }
    ],
