--- a/tutorial/source/model_rendering.ipynb
+++ b/tutorial/source/model_rendering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9470bffd",
+   "id": "857effec",
    "metadata": {},
    "source": [
     "# Automatic rendering of Pyro models\n",
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "11d8437b",
+   "execution_count": 22,
+   "id": "8a068eb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "487e771c",
+   "id": "d1266c17",
    "metadata": {},
    "source": [
     "## A Simple Example\n",
@@ -40,8 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "3321e934",
+   "execution_count": 23,
+   "id": "855a7d8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7002597c",
+   "execution_count": 24,
+   "id": "e1e9628e",
    "metadata": {},
    "outputs": [
     {
@@ -102,13 +102,13 @@
        "<text text-anchor=\"middle\" x=\"54\" y=\"-53.3\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">obs</text>\n",
        "</g>\n",
        "<!-- m&#45;&gt;obs -->\n",
-       "<g id=\"edge2\" class=\"edge\">\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
        "<title>m&#45;&gt;obs</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M57.7474,-183.0931C59.7466,-172.6241 61.9966,-159.1241 63,-147 64.3197,-131.0545 64.3197,-126.9455 63,-111 62.2945,-102.4753 60.9727,-93.2703 59.5551,-84.917\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"62.9689,-84.1258 57.7474,-74.9069 56.0803,-85.3698 62.9689,-84.1258\"/>\n",
        "</g>\n",
        "<!-- sd&#45;&gt;obs -->\n",
-       "<g id=\"edge3\" class=\"edge\">\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
        "<title>sd&#45;&gt;obs</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M33.6742,-111.2022C36.7476,-103.0064 40.4616,-93.1024 43.8695,-84.0145\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"47.1685,-85.1853 47.4026,-74.593 40.6142,-82.7274 47.1685,-85.1853\"/>\n",
@@ -117,10 +117,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f91b99cb760>"
+       "<graphviz.graphs.Digraph at 0x7f55785408e0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "530354ef",
+   "id": "eb1f65be",
    "metadata": {},
    "source": [
     "The visualization can be saved to a file by providing `filename='path'` to `pyro.render_model`. You can use different formats such as PDF or PNG by changing the filename's suffix.\n",
@@ -141,8 +141,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3d9d3fc8",
+   "execution_count": 25,
+   "id": "700a0917",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "626584cb",
+   "id": "3a4ea614",
    "metadata": {},
    "source": [
     "## Tweaking the visualization\n",
@@ -162,8 +162,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "2d8fa953",
+   "execution_count": 26,
+   "id": "01a4b74b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,8 +228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "65a80b13",
+   "execution_count": 27,
+   "id": "311896af",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "<text text-anchor=\"middle\" x=\"142\" y=\"-84.3\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">y</text>\n",
        "</g>\n",
        "<!-- ε&#45;&gt;y -->\n",
-       "<g id=\"edge2\" class=\"edge\">\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
        "<title>ε&#45;&gt;y</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M34.8494,-233.6516C25.4263,-210.8095 13.3308,-170.245 31,-142 47.2544,-116.0167 79.9901,-102.2116 105.7196,-95.0872\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"106.7112,-98.4465 115.5405,-92.5904 104.9864,-91.6624 106.7112,-98.4465\"/>\n",
@@ -304,7 +304,7 @@
        "<text text-anchor=\"middle\" x=\"70\" y=\"-156.3\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">c</text>\n",
        "</g>\n",
        "<!-- c&#45;&gt;y -->\n",
-       "<g id=\"edge3\" class=\"edge\">\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
        "<title>c&#45;&gt;y</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M85.2693,-144.7307C95.197,-134.803 108.3153,-121.6847 119.4363,-110.5637\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"122.1564,-112.7933 126.7527,-103.2473 117.2067,-107.8436 122.1564,-112.7933\"/>\n",
@@ -319,10 +319,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f91b99cb880>"
+       "<graphviz.graphs.Digraph at 0x7f549e7035e0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,8 +334,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ab8f45c6",
+   "execution_count": 28,
+   "id": "8babebb4",
    "metadata": {},
    "outputs": [
     {
@@ -425,10 +425,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.sources.Source at 0x7f92705bd340>"
+       "<graphviz.sources.Source at 0x7f5578547100>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "645df936",
    "metadata": {},
    "outputs": [],
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "66fc9f55",
    "metadata": {},
    "outputs": [
@@ -531,27 +531,27 @@
        "<path fill=\"none\" stroke=\"#000000\" d=\"M33.778,-111.5708C36.9872,-103.3187 40.8935,-93.2738 44.4758,-84.0623\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"47.8248,-85.1069 48.1874,-74.5182 41.3008,-82.5697 47.8248,-85.1069\"/>\n",
        "</g>\n",
-       "<!-- sigma -->\n",
+       "<!-- mu -->\n",
        "<g id=\"node3\" class=\"node\">\n",
-       "<title>sigma</title>\n",
-       "<polygon fill=\"#ffffff\" stroke=\"transparent\" points=\"49,-270 15,-270 15,-255 49,-255 49,-270\"/>\n",
-       "<text text-anchor=\"middle\" x=\"32\" y=\"-258.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">sigma</text>\n",
+       "<title>mu</title>\n",
+       "<polygon fill=\"#ffffff\" stroke=\"transparent\" points=\"41.5,-270 22.5,-270 22.5,-255 41.5,-255 41.5,-270\"/>\n",
+       "<text text-anchor=\"middle\" x=\"32\" y=\"-258.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">mu</text>\n",
        "</g>\n",
-       "<!-- sigma&#45;&gt;x -->\n",
+       "<!-- mu&#45;&gt;x -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
-       "<title>sigma&#45;&gt;x</title>\n",
+       "<title>mu&#45;&gt;x</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M34.6976,-254.9589C37.1071,-248.2232 40.7873,-237.9355 44.2904,-228.1426\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"47.6082,-229.2592 47.6809,-218.6646 41.0172,-226.9014 47.6082,-229.2592\"/>\n",
        "</g>\n",
-       "<!-- mu -->\n",
+       "<!-- sigma -->\n",
        "<g id=\"node4\" class=\"node\">\n",
-       "<title>mu</title>\n",
-       "<polygon fill=\"#ffffff\" stroke=\"transparent\" points=\"86.5,-270 67.5,-270 67.5,-255 86.5,-255 86.5,-270\"/>\n",
-       "<text text-anchor=\"middle\" x=\"77\" y=\"-258.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">mu</text>\n",
+       "<title>sigma</title>\n",
+       "<polygon fill=\"#ffffff\" stroke=\"transparent\" points=\"94,-270 60,-270 60,-255 94,-255 94,-270\"/>\n",
+       "<text text-anchor=\"middle\" x=\"77\" y=\"-258.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">sigma</text>\n",
        "</g>\n",
-       "<!-- mu&#45;&gt;x -->\n",
+       "<!-- sigma&#45;&gt;x -->\n",
        "<g id=\"edge5\" class=\"edge\">\n",
-       "<title>mu&#45;&gt;x</title>\n",
+       "<title>sigma&#45;&gt;x</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M74.1797,-254.9589C71.6607,-248.2232 67.8133,-237.9355 64.1509,-228.1426\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"67.3875,-226.805 60.6063,-218.6646 60.831,-229.2571 67.3875,-226.805\"/>\n",
        "</g>\n",
@@ -559,10 +559,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f91b99cb340>"
+       "<graphviz.graphs.Digraph at 0x7f549e7b0970>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "8130359c",
    "metadata": {},
    "outputs": [
@@ -597,11 +597,11 @@
        "<!-- Generated by graphviz version 2.40.1 (20161225.0304)\n",
        " -->\n",
        "<!-- Title: %3 Pages: 1 -->\n",
-       "<svg width=\"355pt\" height=\"346pt\"\n",
-       " viewBox=\"0.00 0.00 355.00 346.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<svg width=\"362pt\" height=\"346pt\"\n",
+       " viewBox=\"0.00 0.00 362.00 346.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 342)\">\n",
        "<title>%3</title>\n",
-       "<polygon fill=\"#ffffff\" stroke=\"transparent\" points=\"-4,4 -4,-342 351,-342 351,4 -4,4\"/>\n",
+       "<polygon fill=\"#ffffff\" stroke=\"transparent\" points=\"-4,4 -4,-342 358,-342 358,4 -4,4\"/>\n",
        "<g id=\"clust1\" class=\"cluster\">\n",
        "<title>cluster_N</title>\n",
        "<polygon fill=\"none\" stroke=\"#000000\" points=\"20,-8 20,-83 90,-83 90,-8 20,-8\"/>\n",
@@ -643,47 +643,47 @@
        "<path fill=\"none\" stroke=\"#000000\" d=\"M33.778,-111.5708C36.9872,-103.3187 40.8935,-93.2738 44.4758,-84.0623\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"47.8248,-85.1069 48.1874,-74.5182 41.3008,-82.5697 47.8248,-85.1069\"/>\n",
        "</g>\n",
-       "<!-- sigma -->\n",
+       "<!-- mu -->\n",
        "<g id=\"node3\" class=\"node\">\n",
-       "<title>sigma</title>\n",
-       "<polygon fill=\"#ffffff\" stroke=\"transparent\" points=\"49,-304 15,-304 15,-289 49,-289 49,-304\"/>\n",
-       "<text text-anchor=\"middle\" x=\"32\" y=\"-292.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">sigma</text>\n",
+       "<title>mu</title>\n",
+       "<polygon fill=\"#ffffff\" stroke=\"transparent\" points=\"41.5,-304 22.5,-304 22.5,-289 41.5,-289 41.5,-304\"/>\n",
+       "<text text-anchor=\"middle\" x=\"32\" y=\"-292.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">mu</text>\n",
        "</g>\n",
-       "<!-- sigma&#45;&gt;x -->\n",
+       "<!-- mu&#45;&gt;x -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
-       "<title>sigma&#45;&gt;x</title>\n",
+       "<title>mu&#45;&gt;x</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M33.8004,-288.6848C36.7852,-275.7278 42.8976,-249.1945 47.6208,-228.6914\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"51.0398,-229.4408 49.8741,-218.9103 44.2185,-227.8693 51.0398,-229.4408\"/>\n",
        "</g>\n",
-       "<!-- mu -->\n",
+       "<!-- sigma -->\n",
        "<g id=\"node4\" class=\"node\">\n",
-       "<title>mu</title>\n",
-       "<polygon fill=\"#ffffff\" stroke=\"transparent\" points=\"86.5,-304 67.5,-304 67.5,-289 86.5,-289 86.5,-304\"/>\n",
-       "<text text-anchor=\"middle\" x=\"77\" y=\"-292.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">mu</text>\n",
+       "<title>sigma</title>\n",
+       "<polygon fill=\"#ffffff\" stroke=\"transparent\" points=\"94,-304 60,-304 60,-289 94,-289 94,-304\"/>\n",
+       "<text text-anchor=\"middle\" x=\"77\" y=\"-292.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">sigma</text>\n",
        "</g>\n",
-       "<!-- mu&#45;&gt;x -->\n",
+       "<!-- sigma&#45;&gt;x -->\n",
        "<g id=\"edge5\" class=\"edge\">\n",
-       "<title>mu&#45;&gt;x</title>\n",
+       "<title>sigma&#45;&gt;x</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M75.1178,-288.6848C71.9973,-275.7278 65.6071,-249.1945 60.6691,-228.6914\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"64.0577,-227.8128 58.3135,-218.9103 57.2523,-229.4518 64.0577,-227.8128\"/>\n",
        "</g>\n",
        "<!-- distribution_description_node -->\n",
        "<g id=\"node6\" class=\"node\">\n",
        "<title>distribution_description_node</title>\n",
-       "<text text-anchor=\"start\" x=\"113\" y=\"-322.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">x ~ Normal</text>\n",
-       "<text text-anchor=\"start\" x=\"113\" y=\"-307.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">y ~ LogNormal</text>\n",
-       "<text text-anchor=\"start\" x=\"113\" y=\"-292.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">z ~ Normal</text>\n",
-       "<text text-anchor=\"start\" x=\"113\" y=\"-277.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">sigma ∈ GreaterThan(lower_bound=0.0)</text>\n",
-       "<text text-anchor=\"start\" x=\"113\" y=\"-262.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">mu ∈ Real()</text>\n",
+       "<text text-anchor=\"start\" x=\"120\" y=\"-322.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">x ~ Normal</text>\n",
+       "<text text-anchor=\"start\" x=\"120\" y=\"-307.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">y ~ LogNormal</text>\n",
+       "<text text-anchor=\"start\" x=\"120\" y=\"-292.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">z ~ Normal</text>\n",
+       "<text text-anchor=\"start\" x=\"120\" y=\"-277.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">sigma ∈ GreaterThan(lower_bound=0.0)</text>\n",
+       "<text text-anchor=\"start\" x=\"120\" y=\"-262.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">mu ∈ Real()</text>\n",
        "</g>\n",
        "</g>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f91b99c0b20>"
+       "<graphviz.graphs.Digraph at 0x7f549e76adc0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2263b1ac",
+   "id": "4dbe4925",
    "metadata": {},
    "source": [
     "## Overlapping non-nested plates\n",
@@ -713,8 +713,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "96757d84",
+   "execution_count": 32,
+   "id": "9f1a4ebf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,8 +731,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "f700a715",
+   "execution_count": 33,
+   "id": "8514d7df",
    "metadata": {},
    "outputs": [
     {
@@ -798,10 +798,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f91b1937310>"
+       "<graphviz.graphs.Digraph at 0x7f549e703a60>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
