Update signature of `sample` in tutorial `intro_long` (#3112)

--- a/tutorial/source/intro_long.ipynb
+++ b/tutorial/source/intro_long.ipynb
@@ -588,7 +588,7 @@
     "```python\n",
     "def sample(\n",
     "    name: str,\n",
-    "    distribution: pyro.distributions.Distribution,\n",
+    "    fn: pyro.distributions.Distribution,\n",
     "    *,\n",
     "    obs: typing.Optional[torch.Tensor] = None,\n",
     "    infer: typing.Optional[dict] = None\n",
