--- a/tutorial/source/prior_predictive.ipynb
+++ b/tutorial/source/prior_predictive.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "- Wrap your model in a plotting function.\n",
     "- Use [ipywidgets.interact()](https://ipywidgets.readthedocs.io/en/stable/examples/Using%20Interact.html) to create sliders for each parameter of your prior.\n",
-    "- For expensive models, cache sampling using the [ResamplingCache](https://docs.pyro.ai/en/stable/infer.util.html#pyro.infer.resampler.ResamplingCache)."
+    "- For expensive models, use a [Resampler](https://docs.pyro.ai/en/stable/infer.util.html#pyro.infer.resampler.Resampler)."
    ]
   },
   {
@@ -34,7 +34,7 @@
     "import pyro\n",
     "import pyro.distributions as dist\n",
     "import pyro.poutine as poutine\n",
-    "from pyro.infer.resampler import ResamplingCache\n",
+    "from pyro.infer.resampler import Resampler\n",
     "\n",
     "assert pyro.__version__.startswith('1.8.1')\n",
     "smoke_test = ('CI' in os.environ)  # for CI testing only"
@@ -99,7 +99,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c9601b81e234a538327b053e478415f",
+       "model_id": "f26fcc17934c4e3581f0fac657f19832",
        "version_major": 2,
        "version_minor": 0
       },
@@ -175,7 +175,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c847c90dda24469fb9ffda7bf6a4f80c",
+       "model_id": "84b32956e9ac4b39b22153252662c3d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,11 +212,11 @@
    "id": "4e9bacfa",
    "metadata": {},
    "source": [
-    "## ResamplingCache\n",
+    "## Resampler\n",
     "\n",
-    "For more expensive simulations, sampling may be too slow to interactively generate samples at each time step. As a computational trick we can cache samples drawn from past priors and reuse them in similar priors -- provided we importance sample or resample. Pyro provides an importance [ResamplingCache](https://docs.pyro.ai/en/stable/infer.util.html#pyro.infer.resampler.ResamplingCache) to aid in interactively visualizing expensive models.\n",
+    "For more expensive simulations, sampling may be too slow to interactively generate samples at each change. As a computational trick we can draw many samples once from a diffuse distribution, then resample them from a modified distribution -- provided we importance sample or resample. Pyro provides an importance [Resampler](https://docs.pyro.ai/en/stable/infer.util.html#pyro.infer.resampler.Resampler) to aid in interactively visualizing expensive models.\n",
     "\n",
-    "We'll start with our original model and create two wrappers: a cached model and a plotting function."
+    "We'll start with our original model and create a way to make parametrized ``guide``s with given priors. These guides are just the top half our our model, the top level parameters."
    ]
   },
   {
@@ -226,17 +226,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def conditioned_model(df, p_scale, m_scale):\n",
-    "    # Note we unsqueeze to support batching.\n",
-    "    df = torch.as_tensor(df)[..., None]\n",
-    "    p_scale = torch.as_tensor(p_scale)[..., None]\n",
-    "    m_scale = torch.as_tensor(m_scale)[..., None]\n",
-    "    \n",
-    "    data = {\"df\": df, \"p_scale\": p_scale, \"m_scale\": m_scale}\n",
-    "    with pyro.plate(\"trajectories\", len(df), dim=-2):\n",
-    "        return poutine.condition(model, data)()\n",
-    "\n",
-    "cache = ResamplingCache(conditioned_model, batch_size=100)"
+    "def make_guide(df0, df1, p0, p1, m0, m1):\n",
+    "    def guide():\n",
+    "        # Sample parameters from the prior.\n",
+    "        pyro.sample(\"df\", dist.LogNormal(df0, df1))\n",
+    "        pyro.sample(\"p_scale\", dist.LogNormal(p0, p1))  # process noise\n",
+    "        pyro.sample(\"m_scale\", dist.LogNormal(m0, m1))  # measurement noise\n",
+    "    return guide"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7acbde94",
+   "metadata": {},
+   "source": [
+    "Next we'll initialize the `Resampler` with a diffuse guide that covers most of our desired parameter space. This can be expensive in real simulations, so you might want to run it overnight."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "74a685c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.15 s, sys: 113 ms, total: 1.26 s\n",
+      "Wall time: 639 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "diffuse_guide = make_guide(0, 10, 0, 10, 0, 10)\n",
+    "resampler = Resampler(model, diffuse_guide, num_samples=10000)"
    ]
   },
   {
@@ -244,24 +269,21 @@
    "id": "785c131c",
    "metadata": {},
    "source": [
-    "The `.cache()` method takes a dictionary of prior distributions. Note these prior distributions cannot depend on each other."
+    "The `Resampler.sample()` method takes a modified guide."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "c939c991",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_cached(df0, df1, p0, p1, m0, m1):\n",
-    "    prior = {\n",
-    "        \"df\": dist.LogNormal(df0, df1),\n",
-    "        \"p_scale\": dist.LogNormal(p0, p1),\n",
-    "        \"m_scale\": dist.LogNormal(m0, m1),\n",
-    "    }\n",
-    "    samples = cache.sample(prior, num_samples=20)\n",
-    "    trajectories = torch.stack(samples)\n",
+    "def plot_resampled(df0, df1, p0, p1, m0, m1):\n",
+    "    guide = make_guide(df0, df1, p0, p1, m0, m1)\n",
+    "    with torch.random.fork_rng():  # reduce churn\n",
+    "        samples = resampler.sample(guide, num_samples=20)\n",
+    "    trajectories = samples[\"obs\"]\n",
     "    plt.figure(figsize=(8, 5)).patch.set_color(\"white\")\n",
     "    plt.plot(trajectories.T)\n",
     "    plt.xlabel(\"time\")\n",
@@ -270,14 +292,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "0fe987b4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dac7d3dc572843ba81f623c2012837c3",
+       "model_id": "a7e8d5d99133433f91a7d8aea3e7322d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -291,7 +313,7 @@
    ],
    "source": [
     "interact(\n",
-    "    plot_cached,\n",
+    "    plot_resampled,\n",
     "    df0=FloatSlider(value=0.0, min=-5, max=5),\n",
     "    df1=FloatSlider(value=1.0, min=0.1, max=10),\n",
     "    p0=FloatSlider(value=0.0, min=-5, max=5),\n",
@@ -311,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "112e9537",
    "metadata": {},
    "outputs": [],
